--- a/static/custom.css
+++ b/static/custom.css
@@ -1,6 +1,16 @@
 h1{
-  padding-top: 10;
-  padding-bottom: 10;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.transaction-heading{
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
+
+h6{
+  padding-top: 20px;
+  color: #676b1d;
+  font-size: 120% !important;
 }
 
 .user-card{
@@ -24,8 +34,14 @@ h1{
   margin-bottom: 30px;
 }
 
-.rating-col{
-  width: 120px;
+.small-col{
+  width: 10%;
+}
+.med-col{
+  width: 25%;
+}
+.large-col{
+  width: 28%;
 }
 #rating{
   padding-left: 40px;
