--- a/templates/report.html
+++ b/templates/report.html
@@ -16,7 +16,7 @@
                   {{ form.dateOfOffense(class="form-control form-control-md", placeholder="Enter the date of offense in yyyy-mm-dd form") }}
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                  {{ form.submit(class="btn btn-primary") }}
+                  {{ form.submit(class="btn btn-outline-info") }}
                 </div>
               </form>
             </div>
