--- a/templates/renterTransactions.html
+++ b/templates/renterTransactions.html
@@ -104,9 +104,20 @@
                                   </div>
                                   <div class="modal-body">
                                     <form method="POST" action="{{ url_for('renterTransactions', rate=1)}}">
-                                        <label for="message-text" class="col-form-label">Rating (1-5):</label>
-                                        <input type="text" class="form-control" name="rating">
-                                        <button type="submit" class="btn btn-primary float-right" name="ratingBtn" value="{{row[0]}}">Save</button> <!--fix button placement later-->
+                                        <div class="form-group">
+                                          <div class="input-group">
+                                            <select class="form-control" id="ratingSelect" name="rating">
+                                              <option>1</option>
+                                              <option>2</option>
+                                              <option>3</option>
+                                              <option>4</option>
+                                              <option>5</option>
+                                            </select>
+                                            <div class="input-group-append">
+                                              <button type="submit" class="btn btn-outline-primary float-right" name="ratingBtn" value="{{row[0]}}">Save</button>
+                                            </div>
+                                          </div>
+                                        </div>
                                     </form>
                                   </div>
                                 </div>
@@ -133,7 +144,7 @@
                                     <form method="POST" action="{{ url_for('renterTransactions', rate=0)}}">
                                         <label for="message-text" class="col-form-label">Write your review:</label>
                                         <textarea class="form-control" id="message-text" name="review"></textarea>
-                                        <button type="submit" class="btn btn-primary float-right" name="reviewBtn" value="{{row[0]}}">Save</button> <!--fix button placement later-->
+                                        <button type="submit" class="btn btn-outline-primary float-right modal-button" name="reviewBtn" value="{{row[0]}}">Save</button>
                                     </form>
                                   </div>
                                 </div>
@@ -141,9 +152,6 @@
                             </div>
                           </td>
                         {% endif %}
-                        <!-- <td class="align-middle" rowspan="4">
-                          <a type="submit" class="btn btn-success text-center d-flex justify-content-center" href="/profile/renter/report/{{row[2]}}">Report</a>
-                        </td> -->
                       </tr>
                     {% endfor %}
                   </tbody>
