--- a/static/custom.css
+++ b/static/custom.css
@@ -2,6 +2,7 @@ h1{
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
 .transaction-heading{
   padding-top: 10px;
   padding-bottom: 0px;
@@ -17,6 +18,7 @@ h6{
   border: none;
   background-color:#f8f9fa;
 }
+
 .text-user-stats{
   color: #91972A;
 }
@@ -37,6 +39,11 @@ h6{
 .modal-button{
   margin-top: 10px;
 }
+
+.profile-button{
+  margin-right: 10px;
+}
+
 #rating{
   padding-left: 40px;
 }
@@ -47,10 +54,9 @@ h6{
 
 }
 .user-table td {
-    padding-right: 5;
-    padding-left: 0;
-    border: 5;
-
+  padding-right: 5;
+  padding-left: 0;
+  border: 5;
 }
 
 .user-info-card{
