--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,6 +20,12 @@
                         <div class="text-xlarge">{{r_rentals}}</div>
                       </a>
                     </div>
+                    <div class="d-flex col-md">
+                      <a href="{{url_for('ownerItems')}}" class="card-body text-user-stats">
+                        <div class="text-muted">All Items</div>
+                        <div class="text-xlarge">{{items}}</div>
+                      </a>
+                    </div>
                   </div>
                   <div class="card-body user-info-card">
                     <table class="table user-table m-0 ">
@@ -38,8 +44,13 @@
                         </tr>
                         {% if interests%}
                           <tr>
-                            <td>Interests:</td>
+                            <td id ="td-thickness">Interests:</td>
                             <td>{{interests}}</td>
+                          </tr>
+                        {%else%}
+                          <tr>
+                            <td id ="td-thickness">Interests:</td>
+                            <td>None</td>
                           </tr>
                         {% endif %}
                       </tbody>
@@ -47,7 +58,8 @@
                   </div>
                 </div>
                 <br>
-                <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{ url_for('editProfile') }}'">Edit Profile</button>
+                <button type="button" class="btn btn-outline-info btn-sm float-right " onclick="window.location.href='{{ url_for('editProfile') }}'">Edit Profile</button>
+                <button type="button" class="btn btn-outline-info btn-sm float-right profile-button" onclick="window.location.href='#'">Add Interests</button>
               </div>
               <div class="col-3">
               </div>
