added blackout dates and edit+delete item functionality

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,8 +59,36 @@
                 </div>
                 <br>
                 <button type="button" class="btn btn-outline-info btn-sm float-right " onclick="window.location.href='{{ url_for('editProfile') }}'">Edit Profile</button>
-                <button type="button" class="btn btn-outline-info btn-sm float-right profile-button" onclick="window.location.href='#'">Add Interests</button>
-              </div>
+                <button type="button" class="btn btn-outline-info btn-sm float-right profile-button" data-toggle="modal" data-target="#interestModal">Add Interests</button> <!--modal button-->
+                <div class="modal fade" id="interestModal" tabindex="-1" role="dialog" aria-labelledby="addInterestsTitle" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="interestsModal">Add a category to your interests</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <form method="POST" action="{{ url_for('profile')}}">
+                            <div class="form-group">
+                              <div class="input-group">
+                                <select class="form-control" id="interestSelect" name="interest">
+                                  {% for i in categories %}
+                                      <option>{{i[0]}}</option> <!--displays the available categories-->
+                                  {% endfor %}
+                                </select>
+                                <div class="input-group-append">
+                                  <button type="submit" class="btn btn-outline-primary float-right" name="interestBtn">Save</button>
+                                </div>
+                              </div>
+                            </div>
+                        </form>
+                      </div><!--end of modal body-->
+                    </div><!--end of modal content-->
+                  </div>
+                </div> <!--end of entire modal div-->
+              </div><!--end of middle cols-->
               <div class="col-3">
               </div>
           </div>
