--- a/templates/items.html
+++ b/templates/items.html
@@ -19,70 +19,52 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% if blackouts%}
-                      {% for (row,i) in zip(items,blackouts) %}
-                        <tr>
-                          <td>{{row[0]}}</td> <!--item name-->
-                          <td>{{row[1]}}</td> <!--Category-->
-                          <td>{{row[3]}} </td> <!--Description-->
-                          <td>{{row[4]}}</td> <!--Daily Rate-->
-                          <td>{{i[2]}} - {{i[3]}}</td>
-                          <td> <!--Edit button-->
-                            <form method="POST" action="">
-                              <button name="editBtn" type="submit" class="btn btn-outline-info btn-sm btn float-left" value=0>Edit</button>
-                            </form>
-                          </td>
-                          <td> <!--delete button-->
-                            <form method="POST" action="{{ url_for('ownerItems', t=0)}}">
-                              <button name="deleteBtn" type="submit" class="btn btn-outline-info btn-sm btn float-left" value="{{row[0]}}">Delete</button>
-                            </form>
-                          </td>
-                        </tr>
-                      {% endfor %}
-                    {% else %}
                       {% for row in items %}
                         <tr>
                           <td>{{row[0]}}</td> <!--item name-->
                           <td>{{row[1]}}</td> <!--Category-->
                           <td>{{row[3]}} </td> <!--Description-->
                           <td>{{row[4]}}</td> <!--Daily Rate-->
-                          <td> <!--blackout button-->
-                            <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#blackoutModal">Add Blackout Dates</button> <!--modal button-->
-                            <div class="modal fade" id="blackoutModal" tabindex="-1" role="dialog" aria-labelledby="blackoutModal" aria-hidden="true">
-                              <div class="modal-dialog modal-dialog-centered" role="document">
-                                <div class="modal-content">
-                                  <div class="modal-header">
-                                    <h5 class="modal-title" id="blackoutModal">Enter start and end dates</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                      <span aria-hidden="true">&times;</span>
-                                    </button>
-                                  </div>
-                                  <div class="modal-body">
-                                    <form method="POST" action="{{ url_for('ownerItems', t=0)}}">
-                                        <div class="form-group">
-                                          <label for="startDate">Start Date</label>
-                                          <input class="form-control" id="startDate" placeholder="YYYY-MM-DD" name="start">
-                                          <label for="endDate">End Date</label>
-                                          <input  class="form-control" id="endDate" placeholder="YYYY-MM-DD" name= "end">
-                                          <button type="submit" class="btn btn-outline-primary float-right modal-button" name="blackoutBtn" value="{{row[0]}}">Save</button>
-                                        </div>
-                                    </form>
-                                  </div><!--end of modal body-->
-                                </div><!--end of modal content-->
-                              </div>
-                            </div> <!--end of entire modal-->
-                          </td>
+                          {% if blackouts[row[0]] == "None"%} <!--Blackout dates or blackout button-->
+                            <td>
+                              <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#blackoutModal">Add Blackout Dates</button> <!--modal button-->
+                               <div class="modal fade" id="blackoutModal" tabindex="-1" role="dialog" aria-labelledby="blackoutModal" aria-hidden="true">
+                                 <div class="modal-dialog modal-dialog-centered" role="document">
+                                   <div class="modal-content">
+                                     <div class="modal-header">
+                                       <h5 class="modal-title" id="blackoutModal">Enter start and end dates</h5>
+                                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                         <span aria-hidden="true">&times;</span>
+                                       </button>
+                                     </div>
+                                     <div class="modal-body">
+                                       <form method="POST" action="{{ url_for('ownerItems', t=0)}}">
+                                           <div class="form-group">
+                                             <label for="startDate">Start Date</label>
+                                             <input class="form-control" id="startDate" placeholder="YYYY-MM-DD" name="start">
+                                             <label for="endDate">End Date</label>
+                                             <input  class="form-control" id="endDate" placeholder="YYYY-MM-DD" name= "end">
+                                             <button type="submit" class="btn btn-outline-primary float-right modal-button" name="blackoutBtn" value="{{row[0]}}">Save</button>
+                                           </div>
+                                       </form>
+                                     </div><!--end of modal body-->
+                                   </div><!--end of modal content-->
+                                 </div>
+                               </div> <!--end of entire modal-->
+                            </td>
+                          {% else %}
+                            <td>{{blackouts[row[0]]}}</td>
+                          {% endif %}
                           <td> <!--Edit button-->
                             <button type="button" class="btn btn-outline-info btn-sm float-right " onclick="window.location.href='{{url_for('editItem', item=row[0])}}'">Edit</button>
                           </td>
                           <td> <!--delete button-->
-                            <form method="POST" action="{{ url_for('ownerItems', t=1)}}">
+                            <form method="POST" action="{{ url_for('ownerItems', t=2)}}">
                               <button name="deleteBtn" type="submit" class="btn btn-outline-info btn-sm btn float-left" value="{{row[0]}}">Delete</button>
                             </form>
                           </td>
                         </tr>
                       {% endfor %}
-                    {% endif %}
                   </tbody>
                 </table>
               </div>
