--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="{{url_for('view_all')}}">Browse Items</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Post Item</a>
+              <a class="nav-link" href="{{url_for('postItem')}}">Post Item</a>
             </li>
           </ul>
           <ul class="navbar-nav navbar-right">
