--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
           <div class="jumbotron">
             <div class="container text-center">
               <h1>Our Stuff</h1>
-              <p>Description</p>
+              <p>Our Stuff is a platform which allows users to rent and post items for temporary use within their community. </p>
             </div>
           </div>
         </div>
