minor changes to db and forms

--- a/templates/ownerTransactions.html
+++ b/templates/ownerTransactions.html
@@ -59,7 +59,7 @@
                       <tr>
                         <td>{{row[3]}}</td> <!--item name-->
                         <td>{{row[4]}}</td> <!--start date-->
-                        <td>{{i}} days</td> <!--days remaining-->
+                        <td>{{i}}</td> <!--days remaining-->
                         <td>{{row[6]}}</td> <!--pick up time-->
                         <td>{{row[7]}}</td> <!--drop off time-->
                         <td>{{row[1]}} <!--renter's email with complete button-->
