--- a/templates/renterTransactions.html
+++ b/templates/renterTransactions.html
@@ -56,7 +56,7 @@
                         <td>{{row[3]}}</td> <!--item name-->
                         <td>{{row[2]}}</td> <!--owner's email-->
                         <td>{{row[4]}}</td> <!--start date-->
-                        <td>{{i}} days</td> <!--days remaining in rental-->
+                        <td>{{i}}</td> <!--days remaining in rental-->
                         <td>{{row[6]}}</td> <!--pick up time-->
                         <td>{{row[7]}}</td> <!--Drop off time-->
                       </tr>
